--- a/1-node-farm/templates/template-product.html
+++ b/1-node-farm/templates/template-product.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Megrim|Nunito+Sans:400,900"
-      rel="stylesheet"
-    />
-    <link
-      rel="icon"
-      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Megrim|Nunito+Sans:400,900" rel="stylesheet" />
+    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png" />
 
     <title>{%PRODUCTNAME%} {%IMAGE%} /// NODE FARM</title>
 
@@ -271,9 +265,7 @@
 
       <figure class="product">
         <div class="product__organic {%NOT_ORGANIC%}"><h5>Organic</h5></div>
-        <a href="#" class="product__back">
-          <span class="emoji-left">👈</span>Back
-        </a>
+        <a href="/overview" class="product__back"> <span class="emoji-left">👈</span>Back </a>
         <div class="product__hero">
           <span class="product__emoji product__emoji--1">{%IMAGE%}</span>
           <span class="product__emoji product__emoji--2">{%IMAGE%}</span>
